# uvfit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/tutorials/: kinms_resolution_test.ipynb  kinms_resolution_test.py  tutorial_kinms_mock.ipynb
notebooks/: tutorial_gaussian_emission.ipynb
scripts/: generate_mock_data.py
src/uvfit/: __init__.py  backends.py  fitter.py  forward_model.py  likelihood.py  nufft.py  uvdataset.py
tests/: conftest.py  test_basic_fit.py  test_cellsize_flux_invariance.py  test_likelihood.py  test_nufft.py
