[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uvfit"
version = "0.1.0"
description = "High-performance 3D spectral-line fitting to interferometric visibilities"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Toby Brown"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "xarray>=2023.1",
    "astropy>=5.3",
]

[project.optional-dependencies]
kinms = [
    "kinms>=3.0",
]
xradio = [
    "xradio",
]
mcmc = [
    "emcee>=3.1",
]
nested = [
    "dynesty>=2.0",
]
uvplot = [
    "uvplot>=0.2.6",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "pytest-cov>=4.0",
]
all = [
    "uvfit[kinms,xradio,mcmc,dev]",
]

[project.urls]
Homepage = "https://github.com/drtobybrown/uvfit"
Repository = "https://github.com/drtobybrown/uvfit"
Issues = "https://github.com/drtobybrown/uvfit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --benchmark-disable"
markers = [
    "benchmark: marks tests as benchmarks (deselect with '--benchmark-disable')",
]

[tool.setuptools_scm]
